ensure technologies filter dropwdown is visible on smaller screen width

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1085,6 +1085,13 @@ input:checked + .toggle:before {
     box-sizing: border-box;
 }
 
+@media only screen and (max-width: 1505px) {
+    .technologies-filter-options-container {
+        left: auto;
+        right: 0;
+    }
+}
+
 .feature-filter-options-container-displayed {
     visibility: visible;
 }
